# user-recommendation

./: .dockerignore  .gitignore  Dockerfile  README.md  post_install.sh  pyproject.toml  scripts.py  setup.cfg
doc/source/content/: algorithm.md  execution.md  flows.md  next.md
doc/source/content/images/: default-fcb71634c14de0ee6fd2f465b20329b750cb9780.html
flows/: flows.py
flows/conf/: config.yml
flows/user_recommendation/: utils.py
flows/user_recommendation/data_preparation/: __init__.py
flows/user_recommendation/data_preparation/data_loading/: __init__.py
flows/user_recommendation/data_preparation/split_datasets/: train_test_split.py
flows/user_recommendation/errors/: __init__.py
flows/user_recommendation/training/: train.py
notebooks/: data_exploration.ipynb  generate_train_test.ipynb  sandbox_lightFM.ipynb  text_processing.ipynb  train_recsys.ipynb  utils.py
test_user_recommendation/integration_test/: 2022-07-17T15:10:43.010742+00:00.csv
user_recommendation/: __init__.py  __main__.py  flows.py  text_processing_flow.py  train_test_split_flow.py  training_flow.py  user_recommendation.ipynb  utils.py
user_recommendation/conf/: config.yml
user_recommendation/data_preparation/split_datasets/: train_test_split.py
user_recommendation/errors/: __init__.py
user_recommendation/split_datasets/: __init__.py  train_test_split.py
user_recommendation/test_user_recommendation/: test_fetch_data.py  test_keyword_extractor.py  test_text_cleaning.py  test_utils.py
user_recommendation/test_user_recommendation/data/: test.json
user_recommendation/user_recommendation/: __init__.py  utils.py
user_recommendation/user_recommendation/data_preparation/data_loading/: fetch_data.py
user_recommendation/user_recommendation/data_preparation/split_datasets/: __init__.py  datasets.py  split.py
user_recommendation/user_recommendation/errors/: __init__.py
user_recommendation/user_recommendation/serializer/: serializer.py
user_recommendation/user_recommendation/training/: lightfm_processing.py  train.py
(+4 files in other folders)
