[tool.poetry]
name = "user_recommendation"
version = "1.0.0"
description = "Python project recommending the most likely user to answer a question."
authors = [
    "Barthélémy Pavy <barthelemy.pavy@gmail.com>"
]

readme = "README.md"

[tool.poetry.scripts]

# development helpers
fmt = "scripts:fmt"

# dependencies of the `ci:cd`
lint = "scripts:lint"
test = "scripts:test"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
pandas = "^1.4.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pylava = "^0.3.0"
pylint = "^2.14.4"
mypy = "^0.961"
halo = "^0.0.31"
jupyterlab = "^3.4.3"
seaborn = "^0.11.2"
wordcloud = "^1.8.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
