[tool.poetry]
name = "user_recommendation"
version = "1.0.0"
description = "Python project recommending the most likely user to answer a question."
authors = [
    "Barthélémy Pavy <barthelemy.pavy@gmail.com>"
]

readme = "README.md"

[tool.poetry.scripts]

# development helpers
fmt = "scripts:fmt"

# dependencies of the `ci:cd`
lint = "scripts:lint"
test = "scripts:test"

download_data = "scripts:download_data"
nltk_resources = "scripts:download_nltk_resources"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pytest = "^7.1.2"
pandas = "^1.4.3"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
lightfm = "^1.16"
Unidecode = "^1.3.4"
keyphrase-vectorizers = "^0.0.10"
keybert = {version = "^0.5.1", extras = ["gensim"]}
llvmlite = "^0.38.1"
bertopic = "^0.11.0"
metaflow = "^2.7.2"
gdown = "^4.5.1"
types-PyYAML = "^6.0.10"
seaborn = "^0.11.2"
nltk = "^3.7"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pylava = "^0.3.0"
pylint = "^2.14.4"
mypy = "^0.961"
halo = "^0.0.31"
jupyterlab = "^3.4.3"
wordcloud = "^1.8.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
